--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
                     <button class="link-item-button" mdui-dialog="{target: '#morecard4'}">
                         <div>Fmkli的联系方式</div>
                     </button>
+                    <button class="link-item-button" mdui-dialog="{target: '#morecard'}">
+                        <div>关于Fmkli</div>
+                    </button>
                 </div>
                 <div class="self-content">
                     <div class="info-container center">
-                        <button class="link-item-button" mdui-dialog="{target: '#morecard'}">
-                            <div>关于Fmkli</div>
-                        </button>
-                        <hr>
-                        一个挣扎存活于网络边缘的网站，默默无闻
+                        <h3>关于本站</h3>
+                        N个挣扎存活于网络边缘的网站，默默无闻
                         <br>站长开学后只在周五、周六、周日上线，封校除外。 
                         <hr>
                         <h3>其他</h3>
