--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
             <div class="mdui-container">
                 <div class="mdui-row">
                     <!--可输入其他内容-->
+                    <h2 style="text-align: center;" id="firsttitle">游戏捏~</h2><hr>
                     <a href="https://dino.imfmkli.top/" class="link-item">
                         <div class="link-icon"><i class="fa fa-gamepad"></i></div>
                         <div>小恐龙</div>
