--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
                     <button class="link-item-button" mdui-dialog="{target: '#morecard5'}">
                         <div>Games</div>
                     </button>
+                    <hr id="caidanla" style="display: none;">
+                    <button class="link-item-button" onclick="chouqian();" id="caidanla" style="display: none;">
+                        <div id="qianza">抽签</div>
+                    </button>
                 </div>
                 <div class="self-content">
                     <div class="info-container center">
