--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://unpkg.com/marked@4.2.5/marked.min.js"></script>
 
 </head>
-<body class="locked">
+<body class="locked mdui-theme-primary-indigo mdui-theme-accent-pink">
     <div class="self-avatar flex-center">
         <div class="loading-mask fixed-layer no-delay"></div>
         <div class="loading-wrapper">
@@ -315,10 +315,10 @@
 <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans" media="none" onload="this.media='all'">
 <script src="https://fastly.jsdelivr.net/gh/ClassicOldSong/typinyin.js@master/typinyin.min.js"></script>
+<script src="./mdui/js/mdui.min.js"></script>
 <script src="static/js/main.js"></script>
 <script src="static/js/qita.js"></script>
 <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
-<script src="./mdui/js/mdui.min.js"></script>
 <script>
     (function () {
         var Bloglist = "https://blog.imfmkli.top/wp-json/wp/v2/posts"; //Blog文章解析，目前只支持Wordpress，Json格式
