--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <script src="./static/js/jiance.js"></script>
     <link rel="stylesheet" href="static/css/loading.css">
     <link rel="stylesheet" href="static/css/qita.css">
     <link rel="stylesheet" href="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.css">
     <link rel="stylesheet" href="./mdui/css/mdui.min.css">
     <script src="jquery.min.js"></script>
-    <script src="https://unpkg.com/meting@2.0.1/dist/Meting.min.js"></script>
-    <script src="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.js"></script>
     <script src="https://unpkg.com/marked@4.2.5/marked.min.js"></script>
 
 </head>
@@ -306,6 +305,9 @@
             </div>
         </div>
     </div>
+
+    <!--方便用户查看报错的调试模式-->
+
 
 </body>
 
