--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans" media="none" onload="this.media='all'">
 <script src="https://fastly.jsdelivr.net/gh/ClassicOldSong/typinyin.js@master/typinyin.min.js"></script>
 <script src="./mdui/js/mdui.min.js"></script>
-<script src="static/js/man.js"></script>
+<script src="static/js/main.js"></script>
 <script src="static/js/qita.js"></script>
 <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 <script>
