--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
     <title>Fmkli的主页</title>
@@ -313,10 +313,10 @@
 
 
 <link rel="stylesheet" href="static/css/main.css">
-<link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/ClassicOldSong/typinyin.js@0.1.3/typinyin.css">
+<link rel="stylesheet" href="htttps://jsd.onmicrosoft.cn/gh/ClassicOldSong/typinyin.js@0.1.3/typinyin.css">
 <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans" media="none" onload="this.media='all'">
-<script src="https://fastly.jsdelivr.net/gh/ClassicOldSong/typinyin.js@master/typinyin.min.js"></script>
+<script src="htttps://jsd.onmicrosoft.cn/gh/ClassicOldSong/typinyin.js@master/typinyin.min.js"></script>
 <script src="./mdui/js/mdui.min.js"></script>
 <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 <script src="static/js/main.js"></script>
@@ -351,7 +351,7 @@
                 py: ["huan'ying", "lai'dao", "zhe'li", "。"],
             }, {
                 ch: ["只想", "做", "一个","安静的","小站", "。"],
-                py: ["zhi'xiang", "zuo", "yi'ge","an'jing'的","xiao'zhan", "。"],
+                py: ["zhi'xiang", "zuo", "yi'ge","an'jing'de","xiao'zhan", "。"],
             }, {
                 ch: ["一个", "挣扎", "存活","于","网络", "边缘", "的", "网站", "，", "默默无闻"],
                 py: ["yi'ge", "zheng'zha", "cun'huo","yv","wang'luo", "bian'yvan", "de", "wang'zhan", "，", "mo'mo'wu'wen"],
