--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 <link rel="stylesheet" href="htttps://jsd.onmicrosoft.cn/gh/ClassicOldSong/typinyin.js@0.1.3/typinyin.css">
 <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans" media="none" onload="this.media='all'">
-<script src="htttps://jsd.onmicrosoft.cn/gh/ClassicOldSong/typinyin.js@master/typinyin.min.js"></script>
+<script src="htttps://jsd.onmicrosoft.cn/gh/ClassicOldSong/typinyin.js@master/typinyin.js"></script>
 <script src="./mdui/js/mdui.min.js"></script>
 <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 <script src="static/js/main.js"></script>
