--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                         <div>最近の文章</div>
                     </button>
                     <hr>
-                    <a class="link-item-button" href="https://support.qq.com/products/345713">
+                    <a href="https://support.qq.com/products/345713"><button class="link-item-button>
                         <div>Fmkli的兔小巢·反馈Bug和提出好主意</div>
-                    </a>
+                    </button></a>
                     <hr>
                     <button class="link-item-button" mdui-dialog="{target: '#morecard4'}">
                         <div>Fmkli的联系方式</div>
