--- a/index.html
+++ b/index.html
@@ -92,11 +92,7 @@
                     <hr>
                     <button class="link-item-button>
                         <a href="https://support.qq.com/products/345713"><div>Fmkli的兔小巢·反馈Bug和提出好主意</div></a>
-                    </button>
-                    <hr>
-                    <button class="link-item-button" mdui-dialog="{target: '#morecard4'}">
-                        <div>Fmkli的联系方式</div>
-                    </button>
+                    </button
                     <hr>
                     <button class="link-item-button" mdui-dialog="{target: '#morecard'}">
                         <div>关于Fmkli</div>
