--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                         <div class="link-icon"><i class="fa fa-list-ul"></i></div>
                         <div>说说</div>
                     </a>
-                    <a href="https://fmkli.github.io/Privacy-policy/" class="link-item">
-                        <div class="link-icon"><i class="fa fa-question-circle"></i></div>
-                        <div>隐私政策</div>
+                    <a href="https://support.qq.com/products/345713" class="link-item">
+                        <div class="link-icon"><i class="fa fa-bullhorn"></i></div>
+                        <div>Fmkli的兔小巢</div>
                     </a>
                     <a href="http://no-paid-music.imfmkli.top/" class="link-item">
                         <div class="link-icon"><i class="fa fa-music"></i></div>
