--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
                         <div>最近の文章</div>
                     </button>
                     <hr>
+                    <button class="link-item-button" mdui-dialog="{target: '#morecard4'}">
+                        <div>Fmkli的联系方式</div>
+                    </button>
+                    <hr>
                     <button class="link-item-button" mdui-dialog="{target: '#morecard'}">
                         <div>关于Fmkli</div>
                     </button>
