--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="Fmkli,鸽子Fmkli,鸽子主页">
+    <meta name="DEscription" contect="只是鸽子Fmkli搭建来自娱自乐的网站罢了">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fmkli的网站 | 无知小站</title>
     <link rel="stylesheet" href="/static/css/style.css">
@@ -10,7 +12,7 @@
 <body>
     <div class="box center">
 
-        <p style="text-align:center;"><img src="https://www.imfmkli.top/pigen.png" width="15%">
+        <p style="text-align:center;"><img src="https://www.imfmkli.top/pigen.png" width="15%" alt="fmkli">
         <h2 style="text-align:center;" alt="fmkli">Fmkli的主页 -- 无聊破站</h2></p>
         
         <hr>
