--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="Fmkli,鸽子Fmkli,鸽子主页">
-    <meta name="DEscription" contect="只是鸽子Fmkli搭建来自娱自乐的网站罢了">
+    <meta name="description" contect="只是鸽子Fmkli搭建来自娱自乐的网站罢了">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fmkli的网站 | 无知小站</title>
     <link rel="stylesheet" href="/static/css/style.css">
