--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         © 2023 Made By <a href="#">Fmkli</a>
         <br><a href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" class="a-p">萌ICP备20221145号</a>
         <br>这个网页是自己做的，很简陋，但是很简洁，也还能用 ~ 
-        <br><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=1849196940&auto=1&height=32"></iframe>    </div>
+    </div>
 
     <!-- JS -->
     <script src="./static/js/index.js"></script>
