--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <div class="mdui-list-item-content">Mail</div>
                         </a>
                         <a class="mdui-list-item mdui-ripple" href="tencent://message/?uin=2058264685&Site=&Menu=yes">
-                            <div class="mdui-list-item-content">吃掉小菜狗</div>
+                            <div class="mdui-list-item-content">QQ</div>
                         </a>
                     </ul>
                 </li>
